--- a/projects-codecademy/Dasmoto-s-arts-and-crafts/assets/css/styles.css
+++ b/projects-codecademy/Dasmoto-s-arts-and-crafts/assets/css/styles.css
@@ -1,3 +1,17 @@
 * {
     box-sizing: border-box;
 }
+
+body {
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+.banner h1{
+    color: khaki;
+    font-size: 100px;
+    font-weight: bold;
+    text-align: center;
+    background-image: url("../images/pattern.jpeg");
+    background-position: center;
+    
+}
