Styled Dasmoto's Arts and Crafts completely

--- a/projects-codecademy/Dasmoto-s-arts-and-crafts/assets/css/styles.css
+++ b/projects-codecademy/Dasmoto-s-arts-and-crafts/assets/css/styles.css
@@ -9,9 +9,33 @@ body {
 .banner h1{
     color: khaki;
     font-size: 100px;
-    font-weight: bold;
     text-align: center;
     background-image: url("../images/pattern.jpeg");
     background-position: center;
     
+}
+
+h1, h2, .bid {
+    font-weight: bold;
+}
+
+h2 {
+    font-size: 32px;
+    color: white;
+}
+
+.brushes {
+    background-color: mediumspringgreen;
+}
+
+.frames {
+    background-color: lightcoral;
+}
+
+.paint {
+    background-color: skyblue;
+}
+
+.bid {
+    color: blue;
 }
